log
Sun, Apr 13, 2025  5:00:08 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
eeef3b7
Sun, Apr 13, 2025  5:00:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
568f1fd
Sun, Apr 13, 2025  5:00:59 PM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|6
total_score: 0/70
b56c94e
Sun, Apr 13, 2025  5:01:20 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
555275b
Sun, Apr 13, 2025  5:01:31 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42b1dce
Sun, Apr 13, 2025  5:01:55 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1b81bad
Sun, Apr 13, 2025  5:02:19 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '->' token
     mapa->->buckets = NULL ;
           ^~
b0202d2
Sun, Apr 13, 2025  5:02:38 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '->' token
     mapa->->buckets = NULL ;
           ^~
e0cf016
Sun, Apr 13, 2025  5:02:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:18: error: '*mapa->buckets' is a pointer; did you mean to use '->'?
     mapa->buckets->buckets = NULL ;
                  ^~
                  ->
8a89415
Sun, Apr 13, 2025  5:03:08 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:18: error: '*mapa->buckets' is a pointer; did you mean to use '->'?
     mapa->buckets->buckets = NULL ;
                  ^~
                  ->
86ff971
Sun, Apr 13, 2025  5:03:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '(' token
     mapa->(*buckets) = NULL ;
           ^
4e74228
Sun, Apr 13, 2025  5:03:37 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '(' token
     mapa->(*buckets) = NULL ;
           ^
96f6fe8
